@@ -1,24 +1,26 @@
 package com.example.demo.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;              // ✅ ถูกตัว
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;   // ✅ ถูกตัว
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class SecurityCorsConfig {
+    
+    @Value("${cors.allowed.origins}")
+    private String allowedOrigins;
+    
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of(
-                "http://localhost:3000"    // ✅ FE ของคุณ
-        ));
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
+        cfg.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS","PATCH"));
+        cfg.setAllowedHeaders(Arrays.asList("*"));
         cfg.setAllowCredentials(true);
         cfg.setMaxAge(3600L);
 
